# grafika-opengl

./: .gitignore  CMakeLists.txt  README.md  green_pentagon.cpp  jeep.cpp  pentagon.cpp  uas.cpp  unicorn.cpp
include/Breakout/: game.h  particle_generator.h  resource_manager.h  shader.h  texture.h
include/Jokowi/: Particle.h  Renderer.h  Shader.h  Texture.h  Vertex.h  VertexBufferLayout.h
include/Maruf/: mesh.h
res/shaders/: basic.glsl  explore1.glsl  explore2.glsl  lamp.glsl  particle_fragment_shader.glsl  particle_vertex_shader.glsl  raindrop.glsl  smoke.glsl
src/: IndexBuffer.cpp  IndexBuffer.h  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  explore1.cpp  explore2.cpp  explore3.cpp  lighting.cpp
src/Breakout/: game.cpp  particle_generator.cpp  resource_manager.cpp  shader.cpp  texture.cpp
src/Jokowi/: IndexBuffer.cpp  IndexBuffer.h  Particle.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Maruf/: model.h
